<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.activity.CalculatorActivity">

    <!-- Number Buttons -->
    <Button
        android:id="@+id/zero"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/point"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/one"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/two"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/two"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/two"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/three"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/four"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/four"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/five"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/five"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/five"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/six"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/six"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/plus"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/seven"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/seven"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/eight"
        app:layout_constraintTop_toTopOf="@+id/eight" />

    <Button
        android:id="@+id/eight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/eight"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/nine"
        app:layout_constraintTop_toTopOf="@+id/nine" />

    <Button
        android:id="@+id/nine"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/nine"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/plus"
        app:layout_constraintTop_toTopOf="@+id/plus" />


    <!-- Operation Buttons -->

    <Button
        android:id="@+id/plus"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/retangle_button"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintTop_toTopOf="@+id/multiply" />

    <Button
        android:id="@+id/minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/percent"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/circular_button"
        android:text="@string/multiply"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/third_history"
        app:layout_constraintTop_toBottomOf="@+id/third_history" />

    <Button
        android:id="@+id/divide"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/divide"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/percent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/percent"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <!-- Util Buttons -->

    <Button
        android:id="@+id/point"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/point"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/clear"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/clear"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/circular_button"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/equal"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/retangle_button"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/percent"
        app:layout_constraintTop_toBottomOf="@+id/percent" />

    <ImageButton
        android:id="@+id/context_menu"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_context_menu"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/math_operation"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Result Views -->

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:autoSizeTextType="uniform"
        android:text="@string/resultado_principal"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:textAlignment="textEnd"
        android:textColor="@color/purple"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/math_operation"
        app:layout_constraintTop_toBottomOf="@id/math_operation" />

    <TextView
        android:id="@+id/first_history"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        android:textColor="@color/gray"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/result"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <TextView
        android:id="@+id/second_history"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        android:textColor="@color/gray"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/first_history"
        app:layout_constraintTop_toBottomOf="@id/first_history" />

    <TextView
        android:id="@+id/third_history"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        android:textColor="@color/gray"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/second_history"
        app:layout_constraintTop_toBottomOf="@id/second_history" />

</androidx.constraintlayout.widget.ConstraintLayout>