<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="140dp"
            android:src="@drawable/bit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/bit"
            app:layout_constraintStart_toStartOf="@id/bit"
            />

        <TextView
            android:id="@+id/description_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="60dp"
            android:text="@string/desenvolvido_por"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            />

        <TextView
            android:id="@+id/description_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/description_one"
            app:layout_constraintStart_toStartOf="@id/description_one"
            />

        <TextView
            android:id="@+id/description_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="60dp"
            android:text="@string/linkedin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/description_two"
            app:layout_constraintStart_toStartOf="@id/description_two"
            />

        <TextView
            android:id="@+id/description_four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/github"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/description_three"
            app:layout_constraintStart_toStartOf="@id/description_three"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>